# newton-usd-schemas

./: CHANGELOG.md  README.md  pyproject.toml
.github/actions/bootstrap/: action.yml
.github/workflows/: ci.yml
newton_usd_schemas/: _version.py  generatedSchema.usda  plugInfo.json
tests/: test_articulation.py  test_collision.py  test_material.py  test_scene.py  test_scene_solver_xpbd.py  test_solver_kamino.py
